Fix footer spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@ a:hover {
 
 #footer p {
 	margin: 0;
-	padding-top: 40px;
+	padding-top: 20px;
 	letter-spacing: 1px;
 	line-height: normal;
 	font-size: 14px;
